Use helm docs as the default document server Co-authored-by: VyacheslavSemin <vyacheslav.semin@onlyoffice.com> Co-committed-by: VyacheslavSemin <vyacheslav.semin@onlyoffice.com>

--- a/.github/workflows/stable_repo.yaml
+++ b/.github/workflows/stable_repo.yaml
@@ -27,6 +27,7 @@ jobs:
         with:
           repo: ${{ secrets.AWS_BUCKET_URL }}/charts/stable
           chart: ./
+          packageExtraArgs: --dependency-update
 
       - name: Reindex index.yaml
         run: |
