--- a/templates/configmaps/pre-upgrade.yaml
+++ b/templates/configmaps/pre-upgrade.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: pre-upgrade
+  name: docspace-pre-upgrade
   namespace: {{ include "docspace.namespace" . | quote }}
   {{- if .Values.commonLabels }}
   labels:
