--- a/templates/jobs/pre-install.yaml
+++ b/templates/jobs/pre-install.yaml
@@ -2,7 +2,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: pre-install
+  name: docspace-pre-install
   namespace: {{ include "docspace.namespace" . | quote }}
   labels:
     app.kubernetes.io/component: install
