--- a/.github/workflows/4testing_repo.yaml
+++ b/.github/workflows/4testing_repo.yaml
@@ -14,8 +14,8 @@ jobs:
       - name: Set chart version
         run: |
           wget https://download.onlyoffice.com/charts/4testing/index.yaml -P /tmp
-          LATEST_VERSION=$(awk '/docspace:/{f=1};f{print}' /tmp/index.yaml | awk '/version:/ {print $2;}' | head -1)
-          NEW_VERSION=$(awk '/version:/ {print $2;}' Chart.yaml)
+          LATEST_VERSION=$(awk '/docspace:/{f=1};f{print}' /tmp/index.yaml | awk '/^    version:/ {print $2;}' | head -1)
+          NEW_VERSION=$(awk '/^version:/ {print $2;}' Chart.yaml)
           if [[ "$LATEST_VERSION" == *"$NEW_VERSION"* ]]; then
             RC=${LATEST_VERSION: -1}
             let "RC+=1"
