--- a/values.yaml
+++ b/values.yaml
@@ -3158,7 +3158,7 @@ socket:
     enabled: true
     httpGet:
       # socket.startupProbe.httpGet.path Checking the path for startupProbe
-      path: /
+      path: /health
       # socket.startupProbe.httpGet.port Checking the port for startupProbe
       port: 5050
     # socket.startupProbe.failureThreshold Failure threshold for startupProbe
@@ -3173,7 +3173,7 @@ socket:
     failureThreshold: 2
     httpGet:
       # socket.readinessProbe.httpGet.path Checking the path for readinessProbe
-      path: /
+      path: /health
       # socket.readinessProbe.httpGet.port Checking the port for readinessProbe
       port: 5050
     # socket.readinessProbe.periodSeconds Period seconds for readinessProbe
@@ -3190,7 +3190,7 @@ socket:
     failureThreshold: 3
     httpGet:
       # socket.livenessProbe.httpGet.path Checking the path for livenessProbe
-      path: /
+      path: /health
       # socket.livenessProbe.httpGet.port Checking the port for livenessProbe
       port: 5050
     # socket.livenessProbe.periodSeconds Period seconds for livenessProbe
@@ -3321,8 +3321,10 @@ ssoauth:
   startupProbe:
     # ssoauth.startupProbe.enabled Enable startupProbe for ssoauth container
     enabled: true
-    tcpSocket:
-      # ssoauth.startupProbe.tcpSocket.port Checking the port for startupProbe
+    httpGet:
+      # ssoauth.startupProbe.httpGet.path Checking the path for startupProbe
+      path: /health
+      # ssoauth.startupProbe.httpGet.port Checking the port for startupProbe
       port: 5050
     # ssoauth.startupProbe.failureThreshold Failure threshold for startupProbe
     failureThreshold: 30
@@ -3334,8 +3336,10 @@ ssoauth:
     enabled: true
     # ssoauth.readinessProbe.failureThreshold Failure threshold for readinessProbe
     failureThreshold: 2
-    tcpSocket:
-      # ssoauth.readinessProbe.tcpSocket.port Checking the port for readinessProbe
+    httpGet:
+      # ssoauth.readinessProbe.httpGet.path Checking the path for readinessProbe
+      path: /health
+      # ssoauth.readinessProbe.httpGet.port Checking the port for readinessProbe
       port: 5050
     # ssoauth.readinessProbe.periodSeconds Period seconds for readinessProbe
     periodSeconds: 10
@@ -3349,8 +3353,10 @@ ssoauth:
     enabled: true
     # ssoauth.livenessProbe.failureThreshold Failure threshold for livenessProbe
     failureThreshold: 3
-    tcpSocket:
-      # ssoauth.livenessProbe.tcpSocket.port Checking the port for livenessProbe
+    httpGet:
+      # ssoauth.livenessProbe.httpGet.path Checking the path for livenessProbe
+      path: /health
+      # ssoauth.livenessProbe.httpGet.port Checking the port for livenessProbe
       port: 5050
     # ssoauth.livenessProbe.periodSeconds Period seconds for livenessProbe
     periodSeconds: 10
