Apply rbac rules only when installing identity Co-authored-by: VyacheslavSemin <vyacheslav.semin@onlyoffice.com> Co-committed-by: VyacheslavSemin <vyacheslav.semin@onlyoffice.com>

--- a/templates/serviceaccounts/identity.yaml
+++ b/templates/serviceaccounts/identity.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.identity.serviceAccount.create }}
+{{- if and .Values.identity.enabled .Values.identity.serviceAccount.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
