Add the ability to set additional env variables in the router Co-authored-by: Valeria Bagisheva <valeriya.bagisheva@onlyoffice.com> Co-committed-by: Valeria Bagisheva <valeriya.bagisheva@onlyoffice.com>

--- a/templates/applications/router.yaml
+++ b/templates/applications/router.yaml
@@ -139,6 +139,9 @@ spec:
             secretKeyRef:
               name: {{ template "docspace.redis.secretName" . }}
               key: {{ .Values.connections.redisSecretKeyName }}
+        {{- with .Values.router.extraEnvVars }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
         envFrom:
         - configMapRef:
             name: docspace
