--- a/templates/services/identity-cache.yaml
+++ b/templates/services/identity-cache.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.identity.enabled }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -22,3 +23,4 @@ spec:
     {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
     {{- end }}
   type: ClusterIP
+{{- end }}
