--- a/values.yaml
+++ b/values.yaml
@@ -106,6 +106,18 @@ docs:
   converter:
     image:
       repository: onlyoffice/docs-converter
+  # docs.upgrade.job.enabled Enable the execution of job Docs pre-upgrade before upgrading
+  # Set to `false` when upgrading to version `3.0.0` from earlier
+  # When installing `3.0.0` and also when upgrading from version `3.0.0` to a later one, this parameter should be set to `true`
+  upgrade:
+    job:
+      enabled: true
+  # docs.clearCache.job.enabled Enable the execution of job Docs Clear Cache after upgrading
+  # Set to `false` when upgrading to version `3.0.0` from earlier
+  # When installing `3.0.0` and also when upgrading from version `3.0.0` to a later one, this parameter should be set to `true`
+  clearCache:
+    job:
+      enabled: true
 
 # Default values for DocSpace
 
@@ -402,7 +414,7 @@ initContainers:
       # initContainers.checkDB.image.repository check-db initContainer image repository
       repository: onlyoffice/docs-utils
       # initContainers.checkDB.image.tag check-db initContainer image tag
-      tag: 8.0.1-1
+      tag: 8.2.2-1
       # initContainers.checkDB.image.pullPolicy check-db initContainer image pull policy
       pullPolicy: IfNotPresent
     # check-db initContainer resource requests and limits
@@ -4140,7 +4152,7 @@ upgrade:
           repository: onlyoffice/docs-utils
           # upgrade.job.initContainers.rootless.image.tag Rootless initContainer image tag
           # If set to, it takes priority over the `images.tag`
-          tag: 8.0.1-1
+          tag: 8.2.2-1
           # upgrade.job.initContainers.rootless.image.pullPolicy Rootless initContainer image pull policy
           pullPolicy: IfNotPresent
         # Rootless initContainer resource requests and limits
@@ -4195,6 +4207,29 @@ upgrade:
           limits:
             memory: "1Gi"
             cpu: "1000m"
+    docsInitDB:
+      # upgrade.job.docsInitDB.enabled Enable the Init DB for Docs container to create tables required for Docs to work
+      # Set to `true` when upgrading to version `3.0.0` from earlier
+      # When installing `3.0.0` and also when upgrading from version `3.0.0` to a later one, this parameter should be set to `false`
+      enabled: false
+      image:
+        # upgrade.job.docsInitDB.image.repository Init DB for Docs container image repository
+        repository: onlyoffice/docs-utils
+        # upgrade.job.docsInitDB.image.tag Init DB for Docs container image tag
+        tag: 8.2.2-1
+        # upgrade.job.docsInitDB.image.pullPolicy Init DB for Docs container image pull policy
+        pullPolicy: IfNotPresent
+      # Init DB for Docs resource requests and limits
+      # ref: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
+      # upgrade.job.docsInitDB.resources.requests The requested resources for the Init DB for Docs container
+      # upgrade.job.docsInitDB.resources.limits The resources limits for the Init DB for Docs container
+      resources:
+        requests:
+          memory: "256Mi"
+          cpu: "100m"
+        limits:
+          memory: "1Gi"
+          cpu: "1000m"
 
 # Job by elasticsearchClearIndexes has a pre-upgrade hook and executes on an upgrade request before the Upgrade job is launched
 # He checks if Elasticsearch is installed with this chart and if it is installed, it clears the table in the database and indexes in Elasticsearch
@@ -4208,7 +4243,7 @@ elasticsearchClearIndexes:
       # elasticsearchClearIndexes.job.image.repository elasticsearchClearIndexes container image repository
       repository: onlyoffice/docs-utils
       # elasticsearchClearIndexes.job.image.tag elasticsearchClearIndexes container image tag
-      tag: 8.1.0-1
+      tag: 8.2.2-1
       # elasticsearchClearIndexes.job.image.pullPolicy elasticsearchClearIndexes container image pull policy
       pullPolicy: IfNotPresent
     # elasticsearchClearIndexes.job.annotations Defines annotations that will be additionally added to elasticsearchClearIndexes Job
@@ -4325,7 +4360,7 @@ opensearch:
         # opensearch.initContainers.changeVolumeOwner.image.repository Change volume owner container image repository
         repository: onlyoffice/docs-utils
         # opensearch.initContainers.changeVolumeOwner.image.tag Change volume owner container image tag
-        tag: 8.1.0-1
+        tag: 8.2.2-1
         # opensearch.initContainers.changeVolumeOwner.image.pullPolicy Change volume owner container image pull policy
         pullPolicy: IfNotPresent
       # Configure a Security Context for Opensearch change-volume-owner initContainer container in Pod
@@ -4510,7 +4545,7 @@ tests:
     # tests.image.repository test container image name
     repository: onlyoffice/docs-utils
     # tests.image.tag test container image tag
-    tag: 8.0.1-1
+    tag: 8.2.2-1
     # tests.image.pullPolicy test container image pull policy
     pullPolicy: IfNotPresent
   # Configure a Security Context for the Test container
