--- a/templates/configmaps/identity.yaml
+++ b/templates/configmaps/identity.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.identity.enabled }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -16,3 +17,4 @@ data:
   HZ_NETWORK_JOIN_KUBERNETES_ENABLED: {{ .Values.identity.env.kubernetes.enabled | quote }}
   HZ_NETWORK_JOIN_KUBERNETES_SERVICENAME: "identity-cache"
   HZ_NETWORK_JOIN_KUBERNETES_NAMESPACE: {{ include "docspace.namespace" . | quote }}
+{{- end }}
